<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2015 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="enter_patient_id">To begin, enter patient number</string>
    <string name="enter_patient_age">Enter patient\'s age:</string>
    <string name="action_continue">Continue</string>
    <string name="patient_number">Patient Number</string>
    <string name="patient_age">Patient Age</string>
    <string name="enter_patient_gender">Patient Gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>


    <string name="request_permission">This app needs camera permission.</string>
    <string name="description_info">Info</string>
    <string name="picture">Take photo</string>
    <string name="details_about_user">Details about the user</string>
    <string name="patient_details_photo_instructions">Please take a photo of the patient\'s blood work. Take notice that their personal details are obscured.</string>
    <string name="retry">Capture again</string>
    <string name="approve">Approve</string>
    <string name="are_all_details_visible">Is all needed information visible and readable?</string>

    <string name="hand_photo_instructions_title">Fingernail photo instructions</string>
    <string name="hand_photo_instructions">Instructions text</string>

    <string name="dont_move_fingers">Please guide patient to remain still</string>

    <string name="end_process">To finish the process please press button</string>
    <string name="action_submit">Submit</string>
    <string name="session_completed">Session Completed</string>
    <string name="upload_failed">Upload Failed:\n</string>

    <string name="permission_request">This app needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="title_go_to_setting">GOTO SETTINGS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_stop">Play or Stop</string>
</resources>
